# mirscribe-vcf

./: .gitignore  10_parquets.ipynb  12oct.ipynb  README.md  TODO.md  add_pairs_to_db.ipynb  all_vcfs.ipynb  apply_step_5.py  command.txt  cost.py  create_560.py  explore_results.ipynb  main_script.py  main_script_batched.py  main_v2.py  main_v3.py  mircarta.ipynb  pyproject.toml  replication no synth.ipynb  replication with synth.ipynb  run.sh  slideshow.ipynb  stitch.py  synth.py  test.ipynb  vcf_file_line_counts.txt
comut/: comut.ipynb  documentation.ipynb
data/: test_case.vcf
data/cosmic/: readme.md
data/cost/: BTCA-SG_SP117017.snv_mnv_filtered.vcf  sample.vcf
data/db/: db.ipynb  genes.ipynb  import_results_to_db.ipynb  import_synth.ipynb  mirna.ipynb  pairs.ipynb  transcripts.ipynb
data/ensg_to_mirna_name/: mart_export.txt  process.ipynb  readme.md
data/gsea/: README.md  gsea.csv  gsea.ipynb  h.all.v2023.2.Hs.json  parse_gsea.py
data/hgnc/: readme.md
data/intogen/: README.txt  driver_genes.json  intogen.ipynb
data/mirna/: miRCarta - miRBase family.csv  mirna.csv  process_mirnas.ipynb  readme.md
data/mirna_cmc/: cmc_mirnas.csv
data/mirna_coordinates/: grch38_coordinates.csv
data/mutsig_probabilities/: README.md  download_and_process_sample_probabilities.py  probabilities.csv  probabilities_560.csv  probabilities_old.csv  process_560.ipynb
data/oncokb/: entrez_id_to_ensg.tsv  oncokb.csv  oncokb.ipynb  readme.md
data/patient_data/: data.csv  readme.md
data/sample_vcfs/: count_vcf_lines.py  sample.vcf  vcf_file_line_counts.txt
data/synthetic_data/: PD3851a+.vcf  PD3890a+.vcf  PD3904a+.vcf  PD3905a+.vcf  PD3945a+.vcf  PD4005a+.vcf  PD4006a+.vcf  PD4085a+.vcf  PD4086a+.vcf  PD4088a+.vcf  PD4103a+.vcf  PD4107a+.vcf  PD4109a+.vcf  PD4115a+.vcf  PD4116a+.vcf  PD4120a+.vcf  PD4192a+.vcf  PD4194a+.vcf  PD4198a+.vcf  PD4199a+.vcf  PD4248a+.vcf  readme.md  test_simulated.vcf
misc/models/: model_with_no_close_proximity.json
misc/old_main_scripts/: main_script.py  main_script_batched.py
scripts/: __init__.py  config.py  cost_operations.py  dataframe_operations.py  globals.py  main_add_mutsigs.py  main_operations.py  mirna_operations.py  notebook_operations.py  pipeline_orchestration.py  pyensembl_operations.py  rnaduplex_operations.py  rnaduplex_to_csv.awk  rnaduplex_to_csv_new.awk  sequence_operations.py  sql_operations.py  stats.py  truba_operations.py  v2.py  v3.py  vcf_processing.py  xgb_operations.py
scripts/pipeline_steps/: step1.py  step2.py  step3.py  (+2 more)
(+6 files in other folders)
