[tool.poetry]
name = "mirscribe-vcf"
version = "0.1.0"
description = ".vcf file analysis pipeline"
authors = ["Nazif Tasbas <nazifts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.26.4"
pyensembl = "^2.3.12"
xgboost = "^2.0.3"
psutil = "^5.9.8"
editdistance = "^0.8.1"
setuptools = "^69.5.1"
sqlalchemy = "^2.0.30"
intervaltree = "^3.1.0"
joblib = "^1.4.2"
jinja2 = "^3.1.4"
scikit-learn = "^1.4.2"
pygwalker = "^0.4.8.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
snakeviz = "^2.2.0"
seaborn = "^0.13.2"
networkx = "^3.3"
plotly = "^5.22.0"
nbformat = "^5.10.4"
palettable = "^3.3.3"
comut = "^0.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
